# smart-pet-feeder

./: .clang-format  .gitignore  CMakeLists.txt  README.md  debug.gdb  sdkconfig  sdkconfig.defaults
components/Camera/: camera_ov2640.cpp
components/GPIO_Expander/: CMakeLists.txt
components/IR_sensor/: CMakeLists.txt
components/RFID_reader/: CMakeLists.txt
components/bowl_scale/: CMakeLists.txt  using_example.cpp
components/dispense_control/: CMakeLists.txt
components/dispense_scheduler/: CMakeLists.txt  CmakeLists.txt
components/event_bus/: CMakeLists.txt
components/hx711/: CMakeLists.txt  main.c
components/touch_display/: CMakeLists.txt
components/touch_display/include/: Display.h  LVGLManager.h  TouchDriver.h
components/touch_display/src/: Display.cpp  I2CBus.cpp  LVGLManager.cpp  SPIBus.cpp  TouchDriver.cpp
components/ui/: CMakeLists.txt
components/wifi_manager/: CMakeLists.txt
components/wifi_manager/include/: WiFiManager.h
components/wifi_manager/src/: WiFiManager.cpp
components/wifi_manager/test_apps/wifi_connect_test/: CMakeLists.txt  sdkconfig.defaults
components/wifi_manager/test_apps/wifi_connect_test/main/: CMakeLists.txt  idf_component.yml  wifi_connect_test_main.cpp
components/wifi_manager/test_apps/wifi_credential_test/: CMakeLists.txt  partitions.csv
components/wifi_manager/test_apps/wifi_credential_test/main/: CMakeLists.txt  Kconfig.projbuild  wifi_credential_test_main.cpp
main/: CMakeLists.txt  UI.cpp  UI.h  board_config.h  idf_component.yml  image_sender.cpp  image_sender.h  main.cpp
main/serial_test/: grab_jpeg.py  index.html  test_serial.py
(+78 files in other folders)
