idf_component_register(
    SRCS
        "main.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        ui
        touch_display
        event_bus
        wifi_manager
        mqtt_manager
        peripherals
        common
        dispense_control
        IR_sensor
        RFID_reader
        image_receiver
        dispense_scheduler
        bowl_scale
)
