idf_component_register(
    SRCS 
        "src/WiFiManager.cpp"
    INCLUDE_DIRS 
        "include"
    REQUIRES 
        nvs_flash           
        esp_wifi            
        wifi_provisioning   
        protocomm           
        bt
        esp_netif
        esp_event           
        event_bus
)